# Agent-Platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  t_notes.txt  todo.txt
apps/web/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
docs/: SYSTEM_DESIGN.md
docs/architecture/: README.md  diagram-extensions.md  nfr.md  overview.md  sequence-flows.md
infra/authentik/: bootstrap_web_spa.py
infra/keycloak/: realm-export.json
infra/langfuse/: .env.example
infra/litellm/: .env.example  config.yaml
infra/nginx/: Dockerfile  nginx.conf
infra/postgres/init/: 01-init.sql
libs/python/: pyproject.toml
libs/python/eai_common/: __init__.py  auth.py  db.py  settings.py
services/: Dockerfile.python
services/agent-service/: Dockerfile  requirements.txt
services/agent-service/alembic/: env.py
services/agent-service/app/: config.py  db.py  main.py  models.py  schemas.py
services/api-service/: Dockerfile  requirements.txt
services/api-service/app/: auth.py  authentik_password_login.py  config.py  langfuse_client.py  litellm_client.py  main.py  models.py  proxy.py
services/auth-service/: requirements.txt
services/auth-service/app/: main.py  models.py  seed.py
services/execution-service/: Dockerfile  requirements.txt
services/execution-service/app/: config.py  main.py  (+2 more)
services/ingestion-worker/: requirements.txt
services/knowledge-service/: Dockerfile  requirements.txt
services/worker-service/: Dockerfile  requirements.txt
(+87 files in other folders)
